# mahjong-calculator-backend

./: .gitignore  .pylintrc  README.md  openapi.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: code_integration.yml
docs/: index.html
src/: constants.py  factory.py  main.py
src/controller/: base.py  get_mahjong_tiles_controller.py
src/mahjong/: base_handler.py  base_model.py  constants.py
src/mahjong/japanese/: constants.py  factory.py  handler.py  model.py
src/mahjong/japanese/branch/: four_player_mahjong_handler.py  normal_mahjong_handler.py  three_player_mahjong_handler.py
src/mahjong/taiwanese/: constants.py  handler.py  model.py
src/schema/: japanese_mahjong_schema.py  mahjong_schema.py  taiwanese_mahjong_schema.py
tests/: conftest.py
tests/controller/: test_get_mahjong_tiles_controller.py
utils/: export_openapi.py
